@startuml Gladiador

class Gladiador{
    -nombre: String
    -energia: Energia
    -turno: Turno
    -equipo: Equipo
    -dispositivoDeAzar: DispositivoDeAzar
    +Gladiador(nombre: String)
    +ascenderSeniority()
    +moverse(tablero: Tablero)
    +perderTurnos()
    +finalizarTurno()
    +recibirDanio(energia: Energia
    +defenderse()
}


interface Seniority{
    +ascenderSeniority(turno: Turno): Seniority
    +aumentarEnergia(energia: Energia)
}

class Novato{
    -energia: Energia
    -turnosParaEvolucionar: Turno
    +ascenderSeniority(turno: Turno): Seniority
    +aumentarEnergia(energia: Energia)
}

class SemiSenior{
    -energia: Energia
    -turnosParaEvolucionar: Turno
    +ascenderSeniority(turno: Turno): Seniority
    +aumentarEnergia(energia: Energia)
}

class Senior{
    -energia: Energia
    +ascenderSeniority(turno: Turno): Seniority
    +aumentarEnergia(energia: Energia)
}


Gladiador --> Seniority

Seniority <|-- Novato
Seniority <|-- SemiSenior
Seniority <|-- Senior


@enduml